src/objects/QPMS__Inspection_Standard__c.object
<CustomObject>
    <description>This object defines inspection standards for receiving and delivery of raw materials, parts and products.</description>
    <fields>
        <fullName>QPMS__AQL_Limit__c</fullName>
        <description>This is a picklist field</description>
        <label>AQL Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__AQL_Table_Type__c</fullName>
        <label>AQL Table Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Accept_Point__c</fullName>
        <description>This is sample size field</description>
        <label>Accept Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group_Name__c</fullName>
        <description>Approval Group Name</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>to store the approval group name</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>Holds the status of inspection approval Status</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection Standard</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standards3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection Standard</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standards4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection Standard</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standards5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection Standard.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <description>This field stores business unit .</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BU 1</fullName>
                </value>
                <value>
                    <fullName>BU 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>ChangeFieldApprovalStatus</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>Closed Date</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <description>This is a formula field used for storing Created by data</description>
        <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Critical__c</fullName>
        <description>This is a picklist field.</description>
        <label>Critical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>sequence number to select the approvers</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>Inspection Standards</relationshipLabel>
        <relationshipName>Inspection_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Effective_Date__c</fullName>
        <description>This field will hold the effective date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Equipment_Required__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold list of equipment required for the inspection standard.</description>
        <label>Equipments Required</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>Inspection Standards</relationshipLabel>
        <relationshipName>Inspection_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Expiration_Date__c</fullName>
        <description>This field will hold the expire date for the inspection standard.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standardsy4VG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Level__c</fullName>
        <description>It will display level of inspection.</description>
        <label>Inspection Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General I</fullName>
                </value>
                <value>
                    <fullName>General II</fullName>
                </value>
                <value>
                    <fullName>General III</fullName>
                </value>
                <value>
                    <fullName>General V</fullName>
                </value>
                <value>
                    <fullName>Special 1</fullName>
                </value>
                <value>
                    <fullName>Special 2</fullName>
                </value>
                <value>
                    <fullName>Special 3</fullName>
                </value>
                <value>
                    <fullName>Special 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_State__c</fullName>
        <description>It is a picklist which contains state of inspection.</description>
        <label>Inspection State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Tightened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Locations_Name__c</fullName>
        <description>This is for storing location.</description>
        <formula>QPMS__Locations__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locations</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Locations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will store location</description>
        <label>Locations</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Inspection Standards</relationshipLabel>
        <relationshipName>Inspection_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size_Max__c</fullName>
        <description>This is Max lot size field</description>
        <label>Lot Size (Max)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size_Min__c</fullName>
        <description>This is Minimum lot size field</description>
        <label>Lot Size (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot_Size__c</fullName>
        <label>Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Major__c</fullName>
        <description>This is a picklist</description>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Materials_Required__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold list of materials required foe the inspection standard.</description>
        <label>Materials Required</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Inspection Standards</relationshipLabel>
        <relationshipName>Inspection_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Minor__c</fullName>
        <description>This is a picklist</description>
        <label>Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.01</fullName>
                </value>
                <value>
                    <fullName>0.015</fullName>
                </value>
                <value>
                    <fullName>0.025</fullName>
                </value>
                <value>
                    <fullName>0.04</fullName>
                </value>
                <value>
                    <fullName>0.065</fullName>
                </value>
                <value>
                    <fullName>0.1</fullName>
                </value>
                <value>
                    <fullName>0.15</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.4</fullName>
                </value>
                <value>
                    <fullName>0.65</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <description>This is name field.</description>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field ll store the new owner of the record.</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Next_Review_Date__c</fullName>
        <description>This field will hold the next review date of inspection.</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner DueDate</description>
        <label>Note To Approver Owner DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>To save approvers note</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will describe who will be owner of inspection standard.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Plan_Type__c</fullName>
        <label>Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>This field will describe purpose of the inspection standard.</description>
        <label>Purpose</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>This field is for to capture the reason of active and deactive of sampling plan</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reject_Point__c</fullName>
        <description>This is reject point field</description>
        <label>Reject Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Review_Period__c</fullName>
        <description>This field will describe how often you want to review the inspection.</description>
        <label>Review Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Revision__c</fullName>
        <description>This field describes the revision of inspection.</description>
        <displayFormat>R-{00000}</displayFormat>
        <label>Revision</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Plan_Type__c</fullName>
        <description>plan type</description>
        <formula>TEXT(QPMS__Sampling_Plan__r.QPMS__Plan_Type__c)</formula>
        <label>Sample Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Size__c</fullName>
        <description>This is sample size field</description>
        <label>Sample Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan_Name__c</fullName>
        <description>Sampling Plan Name</description>
        <formula>QPMS__Sampling_Plan__r.QPMS__Name__c</formula>
        <label>Sampling Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan_Number__c</fullName>
        <description>Sampling Plan Number</description>
        <formula>QPMS__Sampling_Plan__r.Name</formula>
        <label>Sampling Plan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with sampling plan object which will hold plan type .</description>
        <label>Sample Plan</label>
        <referenceTo>QPMS__Sampling_Plan__c</referenceTo>
        <relationshipLabel>Inspection Standards</relationshipLabel>
        <relationshipName>Inspection_Standards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>This will store sequence</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Standard_Applicable_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field with product family object.</description>
        <label>Standard Applicable to</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Inspection Standards (Standard Applicable to)</relationshipLabel>
        <relationshipName>Inspection_Standards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Standard_Description__c</fullName>
        <description>This will hold brief summary about the the inspection standard.</description>
        <label>Standard Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Standard_Title__c</fullName>
        <description>This field describe Title of the inspection standard.</description>
        <label>Standard Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field will hold the status of inspection standard</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Use_Severity_based_AQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a check box type field</description>
        <label>Use Severity based AQL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to hold value of isLocked</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used for validation purpose.</description>
        <label>isSubmit</label>
        <type>Checkbox</type>
    </fields>
    <label>Inspection Standard</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Name__c</columns>
        <columns>QPMS__Owner_Name__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>